--- a/config/locales/client.pl_PL.yml
+++ b/config/locales/client.pl_PL.yml
@@ -1,10 +1,10 @@
 pl_PL:
   js:
-    solved:
-      allow_accepted_answers: "Pozwól użytkownikom na akceptowanie rozwiązań"
-      accept_answer: "Akceptuj rozwiązanie"
-      has_accepted_answer: "Ten temat ma zaakceptowane rozwiązanie"
-      unaccept_answer: "Niezaakceptowana odpowiedź"
-      accepted_answer: "Zaakceptowana odpowiedź"
-      accepted_html: "<i class='fa-check-square fa accepted'></i> Rozwiązane przez <a href data-user-card='{{username_lower}}'>{{username}}</a> w <a href='{{post_path}}'>poście #{{post_number}}</a>"
-      accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
+    expired:
+      allow_expired_deals: "Pozwól użytkownikom na akceptowanie rozwiązań"
+      mark_deal_expired: "Akceptuj rozwiązanie"
+      has_expired_deal: "Ten temat ma zaakceptowane rozwiązanie"
+      unmark_deal_expired: "Niezaakceptowana odpowiedź"
+      expired_deal: "Zaakceptowana odpowiedź"
+      expired_marked_html: "<i class='fa-check-square fa expired_marked'></i> Rozwiązane przez <a href data-user-card='{{username_lower}}'>{{username}}</a> w <a href='{{post_path}}'>poście #{{post_number}}</a>"
+      expired_marked_notification: "<i title='expired_marked' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
