--- a/config/locales/server.tr_TR.yml
+++ b/config/locales/server.tr_TR.yml
@@ -1,8 +1,8 @@
 tr_TR:
   site_settings:
-    allow_solved_on_all_topics: "Kullanıcılar yanıtları çözüldü olarak seçebilsinler mi? (Varsayılan olarak kategori düzenleme kısmından ayarlayabilirsiniz.)"
+    allow_expired_on_all_topics: "Kullanıcılar yanıtları çözüldü olarak seçebilsinler mi? (Varsayılan olarak kategori düzenleme kısmından ayarlayabilirsiniz.)"
   reports:
-    accepted_solutions:
+    expired_marked_deals:
       title: "Kabul edilen çözümleri"
       xaxis: "Gün"
       yaxis: "Toplam"
