--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -1,11 +1,11 @@
 en:
   js:
-    solved:
-      allow_accepted_answers: "Allow topic owner and staff to mark a reply as the solution"
-      accept_answer: "This reply solves the problem"
-      has_accepted_answer: "This topic has a solution"
-      unaccept_answer: "This reply no longer solves the problem"
-      accepted_answer: "Solution"
-      solution: "Solution"
-      accepted_html: "<i class='fa-check-square fa accepted'></i> Solved <span class='by'>by <a href data-user-card='{{username_lower}}'>{{username}}</a></span> in <a href='{{post_path}}'>post #{{post_number}}</a>"
-      accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
+    expired:
+      allow_expired_deals: "Allow topic owner and staff to mark a deal as expired_deal"
+      mark_deal_expired: "This deal is expired"
+      has_expired_deal: "This deal is expired"
+      unmark_deal_expired: "Re-open this deal"
+      expired_deal: "Expired"
+      expired_deal: "Expired"
+      expired_marked_html: "<i class='fa-check-square fa expired_marked'></i>"
+      expired_marked_notification: "<i title='expired_marked' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
