--- a/config/locales/client.ru.yml
+++ b/config/locales/client.ru.yml
@@ -1,11 +1,11 @@
 ru:
   js:
-    solved:
-      allow_accepted_answers: "Разрешить ответы"
-      accept_answer: "Пометить как ответ"
-      has_accepted_answer: "В этой теме есть ответ"
-      unaccept_answer: "Убрать ответ"
-      accepted_answer: "Подтвержденный ответ"
-      solution: "Ответ"
-      accepted_html: "<i class='fa-check-square fa accepted'></i><a href data-user-card='{{username_lower}}'>{{username}}</a> ответил в <a href='{{post_path}}'>посте #{{post_number}}</a>"
-      accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
+    expired:
+      allow_expired_deals: "Разрешить ответы"
+      mark_deal_expired: "Пометить как ответ"
+      has_expired_deal: "В этой теме есть ответ"
+      unmark_deal_expired: "Убрать ответ"
+      expired_deal: "Подтвержденный ответ"
+      expired_deal: "Ответ"
+      expired_marked_html: "<i class='fa-check-square fa expired_marked'></i><a href data-user-card='{{username_lower}}'>{{username}}</a> ответил в <a href='{{post_path}}'>посте #{{post_number}}</a>"
+      expired_marked_notification: "<i title='expired_marked' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
