--- a/config/locales/client.zh_CN.yml
+++ b/config/locales/client.zh_CN.yml
@@ -1,11 +1,11 @@
 zh_CN:
   js:
-    solved:
-      allow_accepted_answers: "允许楼主和职员选择解决方案"
-      accept_answer: "这个回复解决了问题"
-      has_accepted_answer: "这个主题已经有了解决方案"
-      unaccept_answer: "这个回复没有解决问题"
-      accepted_answer: "解决方案"
-      solution: "解决方案"
-      accepted_html: "<i class='fa-check-square fa accepted'></i> 由<span class='by'><a href data-user-card='{{username_lower}}'>{{username}}</a></span>在 <a href='{{post_path}}'>#{{post_number}} 楼</a>解决"
-      accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
+    expired:
+      allow_expired_deals: "允许楼主和职员选择解决方案"
+      mark_deal_expired: "这个回复解决了问题"
+      has_expired_deal: "这个主题已经有了解决方案"
+      unmark_deal_expired: "这个回复没有解决问题"
+      expired_deal: "解决方案"
+      expired_deal: "解决方案"
+      expired_marked_html: "<i class='fa-check-square fa expired_marked'></i> 由<span class='by'><a href data-user-card='{{username_lower}}'>{{username}}</a></span>在 <a href='{{post_path}}'>#{{post_number}} 楼</a>解决"
+      expired_marked_notification: "<i title='expired_marked' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
