--- a/config/locales/server.de.yml
+++ b/config/locales/server.de.yml
@@ -1,8 +1,8 @@
 de:
   site_settings:
-    allow_solved_on_all_topics: "Erlaube Nutzern für Themen in allen Kategorien Lösungen als Antworten zu markieren (normalerweise wird dies für jede Kategorie individuell eingestellt)"
+    allow_expired_on_all_topics: "Erlaube Nutzern für Themen in allen Kategorien Lösungen als Antworten zu markieren (normalerweise wird dies für jede Kategorie individuell eingestellt)"
   reports:
-    accepted_solutions:
+    expired_marked_deals:
       title: "Akzeptierte Lösungen"
       xaxis: "Tag"
       yaxis: "Gesamt"
