--- a/config/locales/server.ru.yml
+++ b/config/locales/server.ru.yml
@@ -1,8 +1,8 @@
 ru:
   site_settings:
-    allow_solved_on_all_topics: "Разрешить пользователям отмечать ответы в темах (управляется в свойствах раздела)"
+    allow_expired_on_all_topics: "Разрешить пользователям отмечать ответы в темах (управляется в свойствах раздела)"
   reports:
-    accepted_solutions:
+    expired_marked_deals:
       title: "Отмеченные"
       xaxis: "День"
       yaxis: "Всего"
