--- a/config/locales/server.fa.yml
+++ b/config/locales/server.fa.yml
@@ -1,8 +1,8 @@
 fa:
   site_settings:
-    allow_expired_on_all_topics: "به کاربر اجازه انتخاب راه حل را بده."
+    allow_solved_on_all_topics: "به کاربر اجازه انتخاب راه حل را بده."
   reports:
-    expired_marked_deals:
+    accepted_solutions:
       title: "راه حل مورد قبول"
       xaxis: "روز"
       yaxis: "مجموع"
