--- a/config/locales/server.pt_BR.yml
+++ b/config/locales/server.pt_BR.yml
@@ -1,8 +1,8 @@
 pt_BR:
   site_settings:
-    allow_expired_on_all_topics: "Permitir usuários selecionarem soluções em todos tópicos (por padrão você controla isso editando categorias)"
+    allow_solved_on_all_topics: "Permitir usuários selecionarem soluções em todos tópicos (por padrão você controla isso editando categorias)"
   reports:
-    expired_marked_deals:
+    accepted_solutions:
       title: "Soluções aceitas"
       xaxis: "Dia"
       yaxis: "Total"
