--- a/config/locales/client.da.yml
+++ b/config/locales/client.da.yml
@@ -1,11 +1,11 @@
 da:
   js:
-    expired:
-      allow_expired_deals: "Tillad ejer af emne og stab at markere svar som en løsning"
-      mark_deal_expired: "Dette svar løser problemr"
-      has_expired_deal: "Dette svar har en løsning"
-      unmark_deal_expired: "Dette svar løser ikke længere problemet"
-      expired_deal: "Løsning"
-      expired_deal: "Løsning"
-      expired_marked_html: "<i class='fa-check-square fa expired_marked'></i> Løst <span class='by'>af <a href data-user-card='{{username_lower}}'>{{username}}</a></span> i <a href='{{post_path}}'>indlæg #{{post_number}}</a>"
-      expired_marked_notification: "<i title='expired_marked' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
+    solved:
+      allow_accepted_answers: "Tillad ejer af emne og stab at markere svar som en løsning"
+      accept_answer: "Dette svar løser problemr"
+      has_accepted_answer: "Dette svar har en løsning"
+      unaccept_answer: "Dette svar løser ikke længere problemet"
+      accepted_answer: "Løsning"
+      solution: "Løsning"
+      accepted_html: "<i class='fa-check-square fa accepted'></i> Løst <span class='by'>af <a href data-user-card='{{username_lower}}'>{{username}}</a></span> i <a href='{{post_path}}'>indlæg #{{post_number}}</a>"
+      accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
