--- a/config/locales/client.tr_TR.yml
+++ b/config/locales/client.tr_TR.yml
@@ -1,11 +1,11 @@
 tr_TR:
   js:
-    expired:
-      allow_expired_deals: "Kullanıcılar gönderileri çözüm olarak seçebilsinler mi?"
-      mark_deal_expired: "Çözüm olarak kabul et"
-      has_expired_deal: "Bu gönderi çözüm olarak kabul edildi."
-      unmark_deal_expired: "Çözüm olmaktan çıkar"
-      expired_deal: "Kabul edilen çözümler"
-      expired_deal: "Çözüm"
-      expired_marked_html: "<i class='fa-check-square fa expired_marked'></i> Bu konu <a href data-user-card='{{username_lower}}'>{{username}}</a> tarafından <a href='{{post_path}}'>şu gönderide #{{post_number}}</a> çözülmüştür."
-      expired_marked_notification: "<i title='expired_marked' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
+    solved:
+      allow_accepted_answers: "Kullanıcılar gönderileri çözüm olarak seçebilsinler mi?"
+      accept_answer: "Çözüm olarak kabul et"
+      has_accepted_answer: "Bu gönderi çözüm olarak kabul edildi."
+      unaccept_answer: "Çözüm olmaktan çıkar"
+      accepted_answer: "Kabul edilen çözümler"
+      solution: "Çözüm"
+      accepted_html: "<i class='fa-check-square fa accepted'></i> Bu konu <a href data-user-card='{{username_lower}}'>{{username}}</a> tarafından <a href='{{post_path}}'>şu gönderide #{{post_number}}</a> çözülmüştür."
+      accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
