--- a/config/locales/server.pl_PL.yml
+++ b/config/locales/server.pl_PL.yml
@@ -1,8 +1,8 @@
 pl_PL:
   site_settings:
-    allow_expired_on_all_topics: "Pozwól oznaczać użytkownikom wszystkie tematy jako rozwiązane (domyślnie tylko dla wybranych kategorii w ich ustawieniach)"
+    allow_solved_on_all_topics: "Pozwól oznaczać użytkownikom wszystkie tematy jako rozwiązane (domyślnie tylko dla wybranych kategorii w ich ustawieniach)"
   reports:
-    expired_marked_deals:
+    accepted_solutions:
       title: "Zaakceptowane rozwiązania"
       xaxis: "Dzień"
       yaxis: "Wszystkie"
