--- a/config/locales/server.zh_CN.yml
+++ b/config/locales/server.zh_CN.yml
@@ -1,8 +1,8 @@
 zh_CN:
   site_settings:
-    allow_expired_on_all_topics: "允许用户在所有主题选择解决方案（默认情况下在各个分类设置中更设置）"
+    allow_solved_on_all_topics: "允许用户在所有主题选择解决方案（默认情况下在各个分类设置中更设置）"
   reports:
-    expired_marked_deals:
+    accepted_solutions:
       title: "接受的解决方案"
       xaxis: "天"
       yaxis: "总计"
