--- a/config/locales/client.fa.yml
+++ b/config/locales/client.fa.yml
@@ -1,7 +1,7 @@
 fa:
   js:
     solved:
-      allow_accepted_answers: "به صاحب عنوان و مدیران اجازه انتخاب یک پاسخ را به عنوان راه حل بده."
+      allow_expired_mark: "به صاحب عنوان و مدیران اجازه انتخاب یک پاسخ را به عنوان راه حل بده."
       accept_answer: "این پاسخ راه حل مشکل است."
       has_accepted_answer: "این عنوان راه حلی دارد"
       unaccept_answer: "این پاسخ دیگر راه حل این عنوان نیست."
