--- a/config/locales/client.de.yml
+++ b/config/locales/client.de.yml
@@ -1,7 +1,7 @@
 de:
   js:
     solved:
-      allow_accepted_answers: "Erlaube dem Ersteller des Themas und Mitarbeitern eine Antwort als Lösung zu markieren"
+      allow_expired_mark: "Erlaube dem Ersteller des Themas und Mitarbeitern eine Antwort als Lösung zu markieren"
       accept_answer: "Diese Antwort löst das Problem"
       has_accepted_answer: "Dieses Thema hat eine Lösung"
       unaccept_answer: "Diese Antwort löst das Problem doch nicht"
