--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -1,7 +1,7 @@
 en:
   js:
     solved:
-      allow_accepted_answers: "Allow topic owner and staff to mark a reply as the solution"
+      allow_expired_mark: "Allow topic owner and staff to mark a reply as the solution"
       accept_answer: "This reply solves the problem"
       has_accepted_answer: "This topic has a solution"
       unaccept_answer: "This reply no longer solves the problem"
