--- a/config/locales/client.tr_TR.yml
+++ b/config/locales/client.tr_TR.yml
@@ -1,7 +1,7 @@
 tr_TR:
   js:
     solved:
-      allow_accepted_answers: "Kullanıcılar gönderileri çözüm olarak seçebilsinler mi?"
+      allow_expired_mark: "Kullanıcılar gönderileri çözüm olarak seçebilsinler mi?"
       accept_answer: "Çözüm olarak kabul et"
       has_accepted_answer: "Bu gönderi çözüm olarak kabul edildi."
       unaccept_answer: "Çözüm olmaktan çıkar"
