--- a/config/locales/client.es.yml
+++ b/config/locales/client.es.yml
@@ -2,9 +2,9 @@ es:
   js:
     solved:
       allow_expired_mark: "Permitir al creador del tema marcar una respuesta como la solución"
-      accept_answer: "Esta respuesta soluciona el problema"
+      set_expire: "Esta respuesta soluciona el problema"
       has_accepted_answer: "Este tema contiene una solución"
-      unaccept_answer: "Esta respuesta ya no soluciona el problema"
+      unset_expire: "Esta respuesta ya no soluciona el problema"
       accepted_answer: "Solución"
       solution: "Solución"
       accepted_html: "<i class='fa-check-square fa accepted'></i> Resuelto por <a href data-user-card='{{username_lower}}'>{{username}}</a> en el <a href='{{post_path}}'>post #{{post_number}}</a>"
