--- a/config/locales/client.he.yml
+++ b/config/locales/client.he.yml
@@ -2,9 +2,9 @@ he:
   js:
     solved:
       allow_expired_mark: "אפשר למשתמשים לאשר תשובות"
-      accept_answer: "קבל תשובה"
+      set_expire: "קבל תשובה"
       has_accepted_answer: "נושא זה נפתר"
-      unaccept_answer: "בטל קבלת תשובה"
+      unset_expire: "בטל קבלת תשובה"
       accepted_answer: "קבל תשובה"
       accepted_html: "<i class='fa-check-square fa accepted'></i> נפתר על ידי <a href data-user-card='{{username_lower}}'>{{username}}</a><a href='{{post_path}}'>בתגובה  #{{post_number}}</a>"
       accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
