--- a/config/locales/client.pt_BR.yml
+++ b/config/locales/client.pt_BR.yml
@@ -2,9 +2,9 @@ pt_BR:
   js:
     solved:
       allow_expired_mark: "Permitir que o criador do tópico e a equipe marquem uma resposta como a solução"
-      accept_answer: "Esta resposta resolve o problema"
+      set_expire: "Esta resposta resolve o problema"
       has_accepted_answer: "Este tópico tem uma solução"
-      unaccept_answer: "Esta resposta não resolve mais o problema"
+      unset_expire: "Esta resposta não resolve mais o problema"
       accepted_answer: "Solução"
       solution: "Solução"
       accepted_html: "<i class='fa-check-square fa accepted'></i> Resolvido <span class='by'>por <a href data-user-card='{{username_lower}}'>{{username}}</a></span> na <a href='{{post_path}}'>mensagem #{{post_number}}</a>"
