--- a/config/locales/client.ru.yml
+++ b/config/locales/client.ru.yml
@@ -2,9 +2,9 @@ ru:
   js:
     solved:
       allow_expired_mark: "Разрешить ответы"
-      accept_answer: "Пометить как ответ"
+      set_expire: "Пометить как ответ"
       has_accepted_answer: "В этой теме есть ответ"
-      unaccept_answer: "Убрать ответ"
+      unset_expire: "Убрать ответ"
       accepted_answer: "Подтвержденный ответ"
       solution: "Ответ"
       accepted_html: "<i class='fa-check-square fa accepted'></i><a href data-user-card='{{username_lower}}'>{{username}}</a> ответил в <a href='{{post_path}}'>посте #{{post_number}}</a>"
