--- a/config/locales/client.tr_TR.yml
+++ b/config/locales/client.tr_TR.yml
@@ -2,9 +2,9 @@ tr_TR:
   js:
     solved:
       allow_expired_mark: "Kullanıcılar gönderileri çözüm olarak seçebilsinler mi?"
-      accept_answer: "Çözüm olarak kabul et"
+      set_expire: "Çözüm olarak kabul et"
       has_accepted_answer: "Bu gönderi çözüm olarak kabul edildi."
-      unaccept_answer: "Çözüm olmaktan çıkar"
+      unset_expire: "Çözüm olmaktan çıkar"
       accepted_answer: "Kabul edilen çözümler"
       solution: "Çözüm"
       accepted_html: "<i class='fa-check-square fa accepted'></i> Bu konu <a href data-user-card='{{username_lower}}'>{{username}}</a> tarafından <a href='{{post_path}}'>şu gönderide #{{post_number}}</a> çözülmüştür."
