--- a/config/locales/client.da.yml
+++ b/config/locales/client.da.yml
@@ -1,6 +1,6 @@
 da:
   js:
-    solved:
+    expired:
       allow_expired_mark: "Tillad ejer af emne og stab at markere svar som en løsning"
       set_expire: "Dette svar løser problemr"
       has_accepted_answer: "Dette svar har en løsning"
