--- a/config/locales/client.pt_BR.yml
+++ b/config/locales/client.pt_BR.yml
@@ -3,9 +3,9 @@ pt_BR:
     expired:
       allow_expired_mark: "Permitir que o criador do tópico e a equipe marquem uma resposta como a solução"
       set_expire: "Esta resposta resolve o problema"
-      has_accepted_answer: "Este tópico tem uma solução"
+      has_expired_deal: "Este tópico tem uma solução"
       unset_expire: "Esta resposta não resolve mais o problema"
-      accepted_answer: "Solução"
+      expired_deal: "Solução"
       solution: "Solução"
       accepted_html: "<i class='fa-check-square fa accepted'></i> Resolvido <span class='by'>por <a href data-user-card='{{username_lower}}'>{{username}}</a></span> na <a href='{{post_path}}'>mensagem #{{post_number}}</a>"
       accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
