--- a/config/locales/client.da.yml
+++ b/config/locales/client.da.yml
@@ -3,9 +3,9 @@ da:
     expired:
       allow_expired_mark: "Tillad ejer af emne og stab at markere svar som en løsning"
       set_expire: "Dette svar løser problemr"
-      has_accepted_answer: "Dette svar har en løsning"
+      has_expired_deal: "Dette svar har en løsning"
       unset_expire: "Dette svar løser ikke længere problemet"
-      accepted_answer: "Løsning"
+      expired_deal: "Løsning"
       solution: "Løsning"
       accepted_html: "<i class='fa-check-square fa accepted'></i> Løst <span class='by'>af <a href data-user-card='{{username_lower}}'>{{username}}</a></span> i <a href='{{post_path}}'>indlæg #{{post_number}}</a>"
       accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
