--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3,9 +3,9 @@ en:
     expired:
       allow_expired_mark: "Allow topic owner and staff to mark a reply as the solution"
       set_expire: "This reply solves the problem"
-      has_accepted_answer: "This topic has a solution"
+      has_expired_deal: "This topic has a solution"
       unset_expire: "This reply no longer solves the problem"
-      accepted_answer: "Solution"
+      expired_deal: "Solution"
       solution: "Solution"
       accepted_html: "<i class='fa-check-square fa accepted'></i> Solved <span class='by'>by <a href data-user-card='{{username_lower}}'>{{username}}</a></span> in <a href='{{post_path}}'>post #{{post_number}}</a>"
       accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
