--- a/config/locales/client.es.yml
+++ b/config/locales/client.es.yml
@@ -3,9 +3,9 @@ es:
     expired:
       allow_expired_mark: "Permitir al creador del tema marcar una respuesta como la solución"
       set_expire: "Esta respuesta soluciona el problema"
-      has_accepted_answer: "Este tema contiene una solución"
+      has_expired_deal: "Este tema contiene una solución"
       unset_expire: "Esta respuesta ya no soluciona el problema"
-      accepted_answer: "Solución"
+      expired_deal: "Solución"
       solution: "Solución"
       accepted_html: "<i class='fa-check-square fa accepted'></i> Resuelto por <a href data-user-card='{{username_lower}}'>{{username}}</a> en el <a href='{{post_path}}'>post #{{post_number}}</a>"
       accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
