--- a/config/locales/client.he.yml
+++ b/config/locales/client.he.yml
@@ -3,8 +3,8 @@ he:
     expired:
       allow_expired_mark: "אפשר למשתמשים לאשר תשובות"
       set_expire: "קבל תשובה"
-      has_accepted_answer: "נושא זה נפתר"
+      has_expired_deal: "נושא זה נפתר"
       unset_expire: "בטל קבלת תשובה"
-      accepted_answer: "קבל תשובה"
+      expired_deal: "קבל תשובה"
       accepted_html: "<i class='fa-check-square fa accepted'></i> נפתר על ידי <a href data-user-card='{{username_lower}}'>{{username}}</a><a href='{{post_path}}'>בתגובה  #{{post_number}}</a>"
       accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
