--- a/config/locales/client.pl_PL.yml
+++ b/config/locales/client.pl_PL.yml
@@ -3,8 +3,8 @@ pl_PL:
     expired:
       allow_expired_mark: "Pozwól użytkownikom na akceptowanie rozwiązań"
       set_expire: "Akceptuj rozwiązanie"
-      has_accepted_answer: "Ten temat ma zaakceptowane rozwiązanie"
+      has_expired_deal: "Ten temat ma zaakceptowane rozwiązanie"
       unset_expire: "Niezaakceptowana odpowiedź"
-      accepted_answer: "Zaakceptowana odpowiedź"
+      expired_deal: "Zaakceptowana odpowiedź"
       accepted_html: "<i class='fa-check-square fa accepted'></i> Rozwiązane przez <a href data-user-card='{{username_lower}}'>{{username}}</a> w <a href='{{post_path}}'>poście #{{post_number}}</a>"
       accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
