--- a/config/locales/client.tr_TR.yml
+++ b/config/locales/client.tr_TR.yml
@@ -3,9 +3,9 @@ tr_TR:
     expired:
       allow_expired_mark: "Kullanıcılar gönderileri çözüm olarak seçebilsinler mi?"
       set_expire: "Çözüm olarak kabul et"
-      has_accepted_answer: "Bu gönderi çözüm olarak kabul edildi."
+      has_expired_deal: "Bu gönderi çözüm olarak kabul edildi."
       unset_expire: "Çözüm olmaktan çıkar"
-      accepted_answer: "Kabul edilen çözümler"
+      expired_deal: "Kabul edilen çözümler"
       solution: "Çözüm"
       accepted_html: "<i class='fa-check-square fa accepted'></i> Bu konu <a href data-user-card='{{username_lower}}'>{{username}}</a> tarafından <a href='{{post_path}}'>şu gönderide #{{post_number}}</a> çözülmüştür."
       accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
