--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -2,7 +2,7 @@ en:
   site_settings:
     allow_expired_on_all_topics: "Allow users to select solutions on all topics (by default you control this by editing categories)"
   reports:
-    accepted_solutions:
+    exp_deals:
       title: "Accepted solutions"
       xaxis: "Day"
       yaxis: "Total"
