--- a/config/locales/server.es.yml
+++ b/config/locales/server.es.yml
@@ -2,7 +2,7 @@ es:
   site_settings:
     allow_expired_on_all_topics: "Permitir a los usuarios aceptar respuestas como soluciones en todos los temas (por defecto, esto se configura para cada categoría editando cada una)"
   reports:
-    accepted_solutions:
+    exp_deals:
       title: "Soluciones aceptadas"
       xaxis: "Día"
       yaxis: "Total"
