--- a/config/locales/server.pl_PL.yml
+++ b/config/locales/server.pl_PL.yml
@@ -2,7 +2,7 @@ pl_PL:
   site_settings:
     allow_expired_on_all_topics: "Pozwól oznaczać użytkownikom wszystkie tematy jako rozwiązane (domyślnie tylko dla wybranych kategorii w ich ustawieniach)"
   reports:
-    accepted_solutions:
+    exp_deals:
       title: "Zaakceptowane rozwiązania"
       xaxis: "Dzień"
       yaxis: "Wszystkie"
