--- a/config/locales/server.ru.yml
+++ b/config/locales/server.ru.yml
@@ -2,7 +2,7 @@ ru:
   site_settings:
     allow_expired_on_all_topics: "Разрешить пользователям отмечать ответы в темах (управляется в свойствах раздела)"
   reports:
-    accepted_solutions:
+    exp_deals:
       title: "Отмеченные"
       xaxis: "День"
       yaxis: "Всего"
