--- a/config/locales/server.tr_TR.yml
+++ b/config/locales/server.tr_TR.yml
@@ -2,7 +2,7 @@ tr_TR:
   site_settings:
     allow_expired_on_all_topics: "Kullanıcılar yanıtları çözüldü olarak seçebilsinler mi? (Varsayılan olarak kategori düzenleme kısmından ayarlayabilirsiniz.)"
   reports:
-    accepted_solutions:
+    exp_deals:
       title: "Kabul edilen çözümleri"
       xaxis: "Gün"
       yaxis: "Toplam"
