--- a/config/locales/server.fa.yml
+++ b/config/locales/server.fa.yml
@@ -2,7 +2,7 @@ fa:
   site_settings:
     allow_expired_on_all_topics: "به کاربر اجازه انتخاب راه حل را بده."
   reports:
-    accepted_solutions:
+    exp_deals:
       title: "راه حل مورد قبول"
       xaxis: "روز"
       yaxis: "مجموع"
