--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -1,11 +1,11 @@
 en:
   js:
     expired:
-      allow_expired_mark: "Allow topic owner and staff to mark a reply as the solution"
-      set_expire: "This reply solves the problem"
-      has_expired_deal: "This topic has a solution"
-      unset_expire: "This reply no longer solves the problem"
-      expired_deal: "Solution"
-      solution: "Solution"
-      accepted_html: "<i class='fa-check-square fa accepted'></i> Solved <span class='by'>by <a href data-user-card='{{username_lower}}'>{{username}}</a></span> in <a href='{{post_path}}'>post #{{post_number}}</a>"
+      allow_expired_mark: "Allow deal owner and staff to mark the deal expired"
+      set_expire: "This deal is expired"
+      has_expired_deal: "This deal has expired"
+      unset_expire: "Re-open this deal"
+      expired_deal: "Expired"
+      solution: "Expired"
+      accepted_html: "<i class='fa-check-square fa accepted'></i>"
       accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
