--- a/config/locales/client.es.yml
+++ b/config/locales/client.es.yml
@@ -7,5 +7,5 @@ es:
       unset_expire: "Esta respuesta ya no soluciona el problema"
       expired_deal: "Solución"
       solution: "Solución"
-      accepted_html: "<i class='fa-check-square fa accepted'></i> Resuelto por <a href data-user-card='{{username_lower}}'>{{username}}</a> en el <a href='{{post_path}}'>post #{{post_number}}</a>"
-      accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
+      set_expireded_html: "<i class='fa-check-square fa set_expireded'></i> Resuelto por <a href data-user-card='{{username_lower}}'>{{username}}</a> en el <a href='{{post_path}}'>post #{{post_number}}</a>"
+      set_expireded_notification: "<i title='set_expireded' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
