--- a/config/locales/client.pl_PL.yml
+++ b/config/locales/client.pl_PL.yml
@@ -6,5 +6,5 @@ pl_PL:
       has_expired_deal: "Ten temat ma zaakceptowane rozwiązanie"
       unset_expire: "Niezaakceptowana odpowiedź"
       expired_deal: "Zaakceptowana odpowiedź"
-      accepted_html: "<i class='fa-check-square fa accepted'></i> Rozwiązane przez <a href data-user-card='{{username_lower}}'>{{username}}</a> w <a href='{{post_path}}'>poście #{{post_number}}</a>"
-      accepted_notification: "<i title='accepted' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
+      set_expireded_html: "<i class='fa-check-square fa set_expireded'></i> Rozwiązane przez <a href data-user-card='{{username_lower}}'>{{username}}</a> w <a href='{{post_path}}'>poście #{{post_number}}</a>"
+      set_expireded_notification: "<i title='set_expireded' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
