--- a/config/locales/client.fa.yml
+++ b/config/locales/client.fa.yml
@@ -7,5 +7,5 @@ fa:
       unset_expire: "این پاسخ دیگر راه حل این عنوان نیست."
       expired_deal: "راه حل مورد قبول"
       solution: "راه حل"
-      set_expireded_html: "<i class='fa-check-square fa set_expireded'></i> حل شده <span class='by'>توسط <a href data-user-card='{{username_lower}}'>{{username}}</a></span> در <a href='{{post_path}}'>پاسخ #{{post_number}}</a>"
-      set_expireded_notification: "<i title='set_expireded' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
+      set_expired_html: "<i class='fa-check-square fa set_expired'></i> حل شده <span class='by'>توسط <a href data-user-card='{{username_lower}}'>{{username}}</a></span> در <a href='{{post_path}}'>پاسخ #{{post_number}}</a>"
+      set_expired_notification: "<i title='set_expired' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
