--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -6,6 +6,6 @@ en:
       has_expired_deal: "This deal has expired"
       unset_expire: "Re-open this deal"
       expired_deal: "Expired"
-      solution: "Expired"
+      exp: "Expired"
       set_expired_html: "<i class='fa-check-square fa set_expired'></i>"
       set_expired_notification: "<i title='set_expired' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
