--- a/config/locales/client.ru.yml
+++ b/config/locales/client.ru.yml
@@ -6,6 +6,6 @@ ru:
       has_expired_deal: "В этой теме есть ответ"
       unset_expire: "Убрать ответ"
       expired_deal: "Подтвержденный ответ"
-      solution: "Ответ"
+      exp: "Ответ"
       set_expired_html: "<i class='fa-check-square fa set_expired'></i><a href data-user-card='{{username_lower}}'>{{username}}</a> ответил в <a href='{{post_path}}'>посте #{{post_number}}</a>"
       set_expired_notification: "<i title='set_expired' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
