--- a/config/locales/client.de.yml
+++ b/config/locales/client.de.yml
@@ -6,6 +6,6 @@ de:
       has_expired_deal: "Dieses Thema hat eine Lösung"
       unset_expire: "Diese Antwort löst das Problem doch nicht"
       expired_deal: "Lösung"
-      solution: "Lösung"
+      exp: "Lösung"
       set_expired_html: "<i class='fa-check-square fa set_expired'></i> Gelöst <span class='by'>durch <a href data-user-card='{{username_lower}}'>{{username}}</a></span> in <a href='{{post_path}}'>Beitrag #{{post_number}}</a>"
       set_expired_notification: "<i title='Lösung akzeptiert' class='fa fa-check-square'></i><p><span>{{username}}</span> {{description}}</p>"
