--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,8 +1,8 @@
 en:
   site_settings:
-    allow_expired_on_all_topics: "Allow users to select solutions on all topics (by default you control this by editing categories)"
+    allow_expired_on_all_topics: "Allow users to select exps on all topics (by default you control this by editing categories)"
   reports:
     exp_deals:
-      title: "Accepted solutions"
+      title: "Accepted exps"
       xaxis: "Day"
       yaxis: "Total"
